#
# Makefile.am
#
# libsrt root folder Automake template
#
# Copyright (c) 2015-2019 F. Aragon. All rights reserved.
# Released under the BSD 3-Clause License (see the doc/LICENSE)
#

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in

SUBDIRS = src test

maintainer-clean-local:
	rm -rf $(top_srcdir)/utl/tmp
